# docs/swagger.json
@@ -749,8 +749,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.WorkflowEdgeResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -866,8 +869,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.WorkflowEdgeResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -979,8 +985,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.WorkflowNodeResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
